@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 8.2.0 - xxxx-xx-xx =
+* Tweak - Adds the tracking of a selected card brand when paying using co-branded credit cards.
 * Fix - The preferred card brand is used when paying with a co-branded credit card.
 * Add - Additional information is displayed on the "Payment methods" page when listing co-branded credit cards.
 - Tweak - Remove the functionality for saving the customized statement descriptors.
